--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="profile">
         <img
           src="./assets/Avatar-light.png"
-          alt="Foto de Rafael DS sorrindo, no Salão do Reino."
+          alt="Foto de Rafael DS de óculos escuros."
         />
         <p>@rafaelds</p>
       </div>
