--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="container">
       <div id="profile">
         <img
-          src="./assets/Avatar-light.png"
+          src="./assets/avatar.png"
           alt="Foto de Rafael DS de óculos escuros."
         />
         <p>@rafaelds</p>
