--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="profile">
         <img
           src="./assets/avatar.png"
-          alt="Foto de Rafael DS de óculos escuros."
+          alt="Foto de Rafael sorrindo."
         />
         <p>@rafaelds</p>
       </div>
