--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
       <ul>
         <li>
-          <a href="#">Inscrever-se no NLW</a>
+          <a href="https://leafds2.github.io/portfolio-rafael-/" target="_blank"
+            >Inscrever-se no NLW</a>
         </li>
 
         <li>
