Update ion icon name index.html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
         >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
+         <a
+          href="https://https://www.jw.org/Pt/"
+          target="_blank"
+        >
+          <ion-icon name="<ion-icon name="book"></ion-icon>">
+        </a>
       </div>
 
       <footer>
