--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
          <a
-          href="https://https://www.jw.org/Pt/"
+          href="https://www.jw.org/Pt/"
           target="_blank"
         >
           <ion-icon name="<ion-icon name="book"></ion-icon>">
