--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           href="https://www.jw.org/Pt/"
           target="_blank"
         >
-          <ion-icon name="<ion-icon name="logo-book-outline"></ion-icon>
+          <ion-icon name="logo-book"></ion-icon>
         </a>
       </div>
 
