--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
          <a
           href="https://www.jw.org/Pt/"
           target="_blank"
+           class="jw" 
+          title="Conheça a JW.org"
+          aria-label="Conheça a JW.org"
+          rel="noopener noreferrer"
         >
-        
-           
-        </a>
+          <ion-icon name="logo-jw"></ion-icon>  
+      </a>
       </div>
 
       <footer>
