--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
           aria-label="Conheça a JW.org"
           rel="noopener noreferrer"
         >
-          <ion-icon name="logo-jw"></ion-icon>  
+           <img
+          src="./assets/siteLogo-jworg-mobile.svg"
+          alt="Logo JW.org."
+        />  
       </a>
       </div>
 
