--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
            <img
           src="./assets/siteLogo-jworg-mobile.svg"
           alt="Logo JW.org."
+          class="jw-logo"
         />  
       </a>
       </div>
