--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-         <a
+        
+          id="social-links1">
+           <a
           href="https://www.jw.org/Pt/"
           target="_blank"
            class="jw" 
