Update id sociallinks1 index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
         
-          id="social-links1"
+          <id="social-links1">
            <a
           href="https://www.jw.org/Pt/"
           target="_blank"
