Update div id sociallinks1 index.html

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
         >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        
-          <id="social-links1">
-           <a
-          href="https://www.jw.org/Pt/"
+        </div>
+      
+         <div id="social-links1">
+           <a href="https://www.jw.org/Pt/"
           target="_blank"
            class="jw" 
           title="Conheça a JW.org"
